test(mobile) fix TCT test tau/tests/js/core/widget/core/scroller/Scroller [OAPTAU-247]
- scroller element was too low and it did not fit in content

--- a/tau/tests/js/core/widget/core/scroller/Scroller/app.css
+++ b/tau/tests/js/core/widget/core/scroller/Scroller/app.css
@@ -11,5 +11,5 @@
 
 #scroller {
     width: 100%;
-    height: 100%;
+    height: 200px;
 }
